tools/cgoslx-gpio/CgosLib/Cgos.h


//***************************************************************************

typedef struct {
  unsigned short wYear;
  unsigned short wMonth;
  unsigned short wDayOfWeek;
  unsigned short wDay;
  unsigned short wHour;
  unsigned short wMinute;
  unsigned short wSecond;
  unsigned short wMilliseconds;
  } CGOSTIME;


//***************************************************************************

#define CGOS_BOARD_MAX_LEN_ID_STRING 7
#define CGOS_BOARD_MAX_SIZE_ID_STRING 16
#define CGOS_BOARD_MAX_LEN_SERIAL_STRING 12
#define CGOS_BOARD_MAX_SIZE_SERIAL_STRING 16
#define CGOS_BOARD_MAX_LEN_PART_STRING 16
#define CGOS_BOARD_MAX_SIZE_PART_STRING 20
#define CGOS_BOARD_MAX_LEN_EAN_STRING 13
#define CGOS_BOARD_MAX_SIZE_EAN_STRING 20

typedef struct {
  unsigned long dwSize;
  unsigned long dwFlags;
  char szReserved[CGOS_BOARD_MAX_SIZE_ID_STRING];
  char szBoard[CGOS_BOARD_MAX_SIZE_ID_STRING];
  char szBoardSub[CGOS_BOARD_MAX_SIZE_ID_STRING];
  char szManufacturer[CGOS_BOARD_MAX_SIZE_ID_STRING];
  CGOSTIME stManufacturingDate;
  CGOSTIME stLastRepairDate;
  char szSerialNumber[CGOS_BOARD_MAX_SIZE_SERIAL_STRING];
  unsigned short wProductRevision;
  unsigned short wSystemBiosRevision;
  unsigned short wBiosInterfaceRevision;
  unsigned short wBiosInterfaceBuildRevision;
  unsigned long dwClasses;
  unsigned long dwPrimaryClass;
  unsigned long dwRepairCounter;
  char szPartNumber[CGOS_BOARD_MAX_SIZE_PART_STRING];
  char szEAN[CGOS_BOARD_MAX_SIZE_EAN_STRING];
  unsigned long dwManufacturer;
  } CGOSBOARDINFOA;


typedef struct {
  unsigned long dwSize;
  unsigned long dwFlags;
  wchar_t szReserved[CGOS_BOARD_MAX_SIZE_ID_STRING];
  wchar_t szBoard[CGOS_BOARD_MAX_SIZE_ID_STRING];
  wchar_t szBoardSub[CGOS_BOARD_MAX_SIZE_ID_STRING];
  wchar_t szManufacturer[CGOS_BOARD_MAX_SIZE_ID_STRING];
  CGOSTIME stManufacturingDate;
  CGOSTIME stLastRepairDate;
  wchar_t szSerialNumber[CGOS_BOARD_MAX_SIZE_SERIAL_STRING];
  unsigned short wProductRevision;
  unsigned short wSystemBiosRevision;
  unsigned short wBiosInterfaceRevision;
  unsigned short wBiosInterfaceBuildRevision;
  unsigned long dwClasses;
  unsigned long dwPrimaryClass;
  unsigned long dwRepairCounter;
  wchar_t szPartNumber[CGOS_BOARD_MAX_SIZE_PART_STRING];
  wchar_t szEAN[CGOS_BOARD_MAX_SIZE_EAN_STRING];
  unsigned long dwManufacturer;
  } CGOSBOARDINFOW;
#define CGOSBOARDINFO CGOSBOARDINFOW
#define CGOSBOARDINFO CGOSBOARDINFOA

//***************************************************************************

//
// Board handle
//

typedef unsigned long HCGOS;

typedef struct {
  unsigned long dwSize;
  unsigned long dwType;
  unsigned long dwFlags;
  unsigned long dwNativeWidth;
  unsigned long dwNativeHeight;
  unsigned long dwRequestedWidth;
  unsigned long dwRequestedHeight;
  unsigned long dwRequestedBpp;
  unsigned long dwMaxBacklight;
  unsigned long dwMaxContrast;
  } CGOSVGAINFO;

// Library

cgosret_ulong CgosLibGetVersion(void);

cgosret_bool CgosLibInitialize(void);

cgosret_bool CgosLibUninitialize(void);

cgosret_bool CgosLibIsAvailable(void);

cgosret_bool CgosLibInstall(unsigned int install);

cgosret_ulong CgosLibGetDrvVersion(void);

cgosret_ulong CgosLibGetLastError(void); // 1.2
cgosret_bool CgosLibSetLastErrorAddress(unsigned long *pErrNo); // 1.2

// Generic board

cgosret_bool CgosBoardClose(HCGOS hCgos);


cgosret_ulong CgosBoardCount(unsigned long dwClass, unsigned long dwFlags);

cgosret_bool CgosBoardOpen(unsigned long dwClass, unsigned long dwNum, unsigned long dwFlags, HCGOS *phCgos);

cgosret_bool CgosBoardOpenByNameA(const char *pszName, HCGOS *phCgos);

cgosret_bool CgosBoardGetNameA(HCGOS hCgos, char *pszName, unsigned long dwSize);

cgosret_bool CgosBoardGetInfoA(HCGOS hCgos, CGOSBOARDINFOA *pBoardInfo);


cgosret_bool CgosBoardGetBootCounter(HCGOS hCgos, unsigned long *pdwCount);

cgosret_bool CgosBoardGetRunningTimeMeter(HCGOS hCgos, unsigned long *pdwCount);


// VGA (LCD)

cgosret_ulong CgosVgaCount(HCGOS hCgos);

cgosret_bool CgosVgaGetBacklight(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting);

cgosret_bool CgosVgaSetBacklight(HCGOS hCgos, unsigned long dwUnit, unsigned long dwSetting);

cgosret_bool CgosVgaGetBacklightEnable(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting);

cgosret_bool CgosVgaSetBacklightEnable(HCGOS hCgos, unsigned long dwUnit, unsigned long dwSetting);

cgosret_bool CgosVgaGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSVGAINFO *pInfo);
#define CgosBoardOpenByName CgosBoardOpenByNameW
#define CgosBoardGetName CgosBoardGetNameW
#define CgosBoardGetInfo CgosBoardGetInfoW
#define CgosBoardOpenByName CgosBoardOpenByNameA
#define CgosBoardGetName CgosBoardGetNameA
#define CgosBoardGetInfo CgosBoardGetInfoA