tools/CgosPy_1_2/cgos/cgos.py

from __future__ import print_function #CGMOD003

#!/usr/bin/env python
# -*- coding: utf-8 -*-

"""
Copyright (c) 2018, congatec AG. All rights reserved.

This program is free software; you can redistribute it and/or
modify it under the terms of the BSD 2-clause license which 
accompanies this distribution. 

This program is distributed in the hope that it will be useful, 
but WITHOUT ANY WARRANTY; without even the implied warranty of 
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
See the BSD 2-clause license for more details.

The full text of the license may be found at:        
http://opensource.org/licenses/BSD-2-Clause   

--------------------------------------------------------------

Rev 1.0   09-09-2016	LKA		Initial release.
Rev 1.1   13-03-2018	LKA		MOD001: Removed ioGetName because it is not supported.
                                MOD002: Changed data type in Changed data type in array_type_write and array_type_read 
                                          from unsigned int (ctypes.c_uint) to unsigned char (ctypes.c_ubyte)
Rev 1.2	  20-03-2019	LKA		MOD003: Added Python3 support
"""

""" 

ctypes wrapper for accessing the CGOS API shared object / DLL

"""


import ctypes
from sys import platform

# Determine the OS and load the shared object / DLL accordingly:
if platform == "linux" or platform == "linux2":
	# Linux -> load the shared object
	_cgos = ctypes.CDLL("libcgos.so")
elif platform == "win32":
    # Windows -> load the DLL
    _cgos = ctypes.WinDLL("cgos.dll")
else:
    #OS not recognized -> display error message and exit
  print ("ERROR: Could not determine operating system.") #MOD003
  sys.exit(1)

hCgos = ctypes.c_uint(0)

	####################################
	##### FUNCTION GROUP CGOSBOARD #####
	####################################

# ulong CgosLibGetVersion(void)
def libGetVersion():
	_cgos.CgosLibGetVersion.restype = ctypes.c_ulong
	return _cgos.CgosLibGetVersion()
	
# bool CgosLibInitialize(void)
def libInitialize():
	_cgos.CgosLibInitialize.restype = ctypes.c_bool
	return _cgos.CgosLibInitialize()

# bool CgosLibUninitialize(void)
def libUninitialize():
	_cgos.CgosLibUninitialize.restype = ctypes.c_bool
	return _cgos.CgosLibUninitialize()

# bool CgosLibIsAvailable(void)
def libIsAvailable():
	_cgos.CgosLibIsAvailable.restype = ctypes.c_bool
	return _cgos.CgosLibIsAvailable()

# bool CgosLibInstall(unsigned int install)
def libInstall(install):
	_cgos.CgosLibInstall.argytpes = (ctypes.c_uint)
	_cgos.CgosLibInstall.restype = ctypes.c_bool
	return _cgos.CgosLibInstall(install)

# ulong CgosLibGetDrvVersion(void)
def libGetDrvVersion():
	_cgos.CgosLibGetDrvVersion.restype = ctypes.c_ulong
	return _cgos.CgosLibGetDrvVersion()

# ulong CgosLibGetLastError(void)
def libGetLastError():
	_cgos.CgosLibGetLastError.restype = ctypes.c_ulong
	return _cgos.CgosLibGetLastError()

# bool CgosLibSetLastErrorAddress(unsigned long *pErrNo)
def libSetLastErrorAddress(pErrNo):
#	val = ctypes.c_ulong(pErrNo)
#	_cgos.CgosLibSetLastErrorAddress.argtypes = (ctypes.POINTER(ctypes.c_ulong))
#	_cgos.CgosLibSetLastErrorAddress.restype = ctypes.c_bool
#	return _cgos.CgosLibSetLastErrorAddress(byref(val))
	return False;

# ulong CgosBoardCount(unsigned long dwClass,unsigned long dwFlags)
def boardCount(dwClass, dwFlags):
	_cgos.CgosBoardCount.argtypes = (ctypes.c_ulong, ctypes.c_ulong)
	_cgos.CgosBoardCount.restype = ctypes.c_ulong
	return _cgos.CgosBoardCount(dwClass, dwFlags)

# bool CgosBoardOpen(unsigned long dwClass, unsigned long dwNum, unsigned long dwFlags, HCGOS *phCgos)
def boardOpen(dwClass, dwNum, dwFlags):
	_cgos.CgosBoardOpen.argtypes = (ctypes.c_ulong, ctypes.c_ulong, ctypes.c_ulong, ctypes.POINTER(ctypes.c_uint))
	_cgos.CgosBoardOpen.restype = ctypes.c_bool
	return _cgos.CgosBoardOpen(dwClass, dwNum, dwFlags, ctypes.byref(hCgos))

# bool CgosBoardOpenByName(const char *pszName, HCGOS *phCgos)
def boardOpenByName(pszName):
	_cgos.CgosBoardOpenByNameA.argtypes = (ctypes.c_char_p, ctypes.POINTER(ctypes.c_uint))
	_cgos.CgosBoardOpenByNameA.retype = ctypes.c_bool
	pszName = str.encode(pszName) #MOD003
	name = ctypes.create_string_buffer(pszName)
	retval = _cgos.CgosBoardOpenByNameA(name, ctypes.byref(hCgos))
	if retval == 1: return True
	else: return False

# bool CgosBoardClose(HCGOS hCgos)
def boardClose():
	_cgos.CgosBoardClose.argtype = ctypes.c_uint
	_cgos.CgosBoardClose.restype = ctypes.c_bool
	return _cgos.CgosBoardClose(hCgos)

# bool CgosBoardGetName(HCGOS hCgos, const char *pszName, unsigned long dwSize)
def boardGetName():
	_cgos.CgosBoardGetNameA.argtypes = (ctypes.c_uint, ctypes.c_char_p, ctypes.c_ulong)
	_cgos.CgosBoardGetNameA.restype = ctypes.c_bool
	dwSize = ctypes.c_ulong(16)
	pszName = ctypes.create_string_buffer(dwSize.value)
	if _cgos.CgosBoardGetNameA(hCgos, pszName, dwSize) == True: return pszName.value.decode() #MOD003
	else: return False

# bool CgosBoardGetInfo(HCGOS hCgos, CGOSBOARDINFO *pBoardInfo)
def boardGetInfo():
	CGOS_BOARD_MAX_LEN_ID_STRING = 7
	CGOS_BOARD_MAX_SIZE_ID_STRING = 16
	CGOS_BOARD_MAX_LEN_SERIAL_STRING = 12
	CGOS_BOARD_MAX_SIZE_SERIAL_STRING = 16
	CGOS_BOARD_MAX_LEN_PART_STRING = 16
	CGOS_BOARD_MAX_SIZE_PART_STRING = 20
	CGOS_BOARD_MAX_LEN_EAN_STRING = 13
	CGOS_BOARD_MAX_SIZE_EAN_STRING = 20   
		
	class CGOSTIME(ctypes.Structure):
		_fields_ = [
			('wYear', ctypes.c_ushort),
			('wMonth', ctypes.c_ushort),
			('wDayOfWeek', ctypes.c_ushort),
			('wDay', ctypes.c_ushort),
			('wHour', ctypes.c_ushort),
			('wMinute', ctypes.c_ushort),
			('wSecond', ctypes.c_ushort),
			('wMilliseconds', ctypes.c_ushort),
		]

	class CGOSBOARDINFO(ctypes.Structure):
		_fields_ = [
			('dwSize', ctypes.c_uint32),
			('dwFlags', ctypes.c_uint32),
			('szReserved', ctypes.c_char * CGOS_BOARD_MAX_SIZE_ID_STRING),
			('szBoard', ctypes.c_char * CGOS_BOARD_MAX_SIZE_ID_STRING),
			('szBoardSub', ctypes.c_char * CGOS_BOARD_MAX_SIZE_ID_STRING),
			('szManufacturer', ctypes.c_char * CGOS_BOARD_MAX_SIZE_ID_STRING),	
			('stManufacturingDate', CGOSTIME),
			('stLastRepairDate', CGOSTIME),
			('szSerialNumber', ctypes.c_char * CGOS_BOARD_MAX_SIZE_SERIAL_STRING),
			('wProductRevision', ctypes.c_ushort),
			('wSystemBiosRevision', ctypes.c_ushort),
			('wBiosInterfaceRevision', ctypes.c_ushort),
			('wBiosInterfaceBuildRevision', ctypes.c_ushort),
			('dwClasses', ctypes.c_uint),
			('dwPrimaryClasses', ctypes.c_uint),
			('dwRepairCounter', ctypes.c_uint),
			('szPartNumber', ctypes.c_char * CGOS_BOARD_MAX_SIZE_PART_STRING),
			('szEAN', ctypes.c_char * CGOS_BOARD_MAX_SIZE_EAN_STRING),
			('dwManufacturer', ctypes.c_uint),
		]
	      
	cgosboardinfo = CGOSBOARDINFO(0)
	cgostime = CGOSTIME(0)
	cgosboardinfo.dwSize = (ctypes.sizeof(ctypes.c_uint32) * 2) + (ctypes.sizeof(ctypes.c_char) * CGOS_BOARD_MAX_SIZE_ID_STRING * 4)
	cgosboardinfo.dwSize += ((ctypes.sizeof(ctypes.c_ushort)*len(cgostime._fields_)*2) + (ctypes.sizeof(ctypes.c_char) * CGOS_BOARD_MAX_SIZE_ID_STRING))
	cgosboardinfo.dwSize += ((ctypes.sizeof(ctypes.c_ushort) * 4) + (ctypes.sizeof(ctypes.c_uint) * 4))
	cgosboardinfo.dwSize += ((ctypes.sizeof(ctypes.c_char) * CGOS_BOARD_MAX_SIZE_PART_STRING) + (ctypes.sizeof(ctypes.c_char) * CGOS_BOARD_MAX_SIZE_EAN_STRING))
	_cgos.CgosBoardGetInfoA.argtypes = (ctypes.c_uint, ctypes.c_voidp)
	_cgos.CgosBoardGetInfoA.restype = ctypes.c_bool
	if (_cgos.CgosBoardGetInfoA(hCgos, ctypes.addressof(cgosboardinfo))) == True:
		results = {}
		manufacturingdate = {}
		lastrepairdate = {}
		for field in cgosboardinfo._fields_: results[field[0]] = getattr(cgosboardinfo, field[0])
		for field in cgosboardinfo.stManufacturingDate._fields_: manufacturingdate[field[0]] =  getattr(cgosboardinfo.stManufacturingDate, field[0])
		for field in cgosboardinfo.stLastRepairDate._fields_: lastrepairdate[field[0]] =  getattr(cgosboardinfo.stLastRepairDate, field[0])
		results['stManufacturingDate'] = manufacturingdate
		results['stLastRepairDate'] = lastrepairdate
		#MOD003 v
		results['szBoard'] = results['szBoard'].decode()
		results['szBoardSub'] = results['szBoardSub'].decode()
		results['szManufacturer'] = results['szManufacturer'].decode()
		results['szSerialNumber'] = results['szSerialNumber'].decode()
		results['szPartNumber'] = results['szPartNumber'].decode()
		results['szEAN'] = results['szEAN'].decode()
		#MOD003 ^
		return results
	else: return False

# bool CgosBoardGetBootcounter(HCGOS hCgos, unsigned long *pdwCount)
def boardGetBootCounter():
	_cgos.CgosBoardGetBootCounter.argtypes = (ctypes.c_uint, ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosBoardGetBootCounter.restype = ctypes.c_bool
	pdwCount = ctypes.c_ulong(0)
	if (_cgos.CgosBoardGetBootCounter(hCgos, pdwCount)) == True: return pdwCount.value
	else: return False

# bool CgosBoardGetRunningTimeMeter(HCGOS hCgos, unsigned long *pdwCount)
def boardGetRunningTimeMeter():
	_cgos.CgosBoardGetRunningTimeMeter.argtypes = (ctypes.c_uint, ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosBoardGetRunningTimeMeter.restype = ctypes.c_bool
	pdwCount = ctypes.c_ulong(0)
	if(_cgos.CgosBoardGetRunningTimeMeter(hCgos, pdwCount)) == True: return pdwCount.value
	else: return False

	##################################
	##### FUNCTION GROUP CGOSVGA #####
	##################################

# ulong CgosVgaCount(HCGOS hCgos)
def vgaCount():
	_cgos.CgosVgaCount.argtype = ctypes.c_uint
	_cgos.CgosVgaCount.restype = ctypes.c_ulong
	return _cgos.CgosVgaCount(hCgos)

# bool CgosVgaGetBacklight(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting)
def vgaGetBacklight(dwUnit):
	_cgos.CgosVgaGetBacklight.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosVgaGetBacklight.restype = ctypes.c_bool
	pdwSetting = ctypes.c_ulong(0)
	if (_cgos.CgosVgaGetBacklight(hCgos, dwUnit, pdwSetting)) == True: return pdwSetting.value
	else: return False

# bool CgosVgaSetBacklight(HCGOS hCgos, unsigned long dwUnit, unsigned long dwSetting)
def vgaSetBacklight(dwUnit, dwSetting):
	_cgos.CgosVgaSetBacklight.argytpes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosVgaSetBacklight.restype = ctypes.c_bool
	if dwSetting > 100: return False
	return _cgos.CgosVgaSetBacklight(hCgos, dwUnit, dwSetting)

# bool CgosVgaGetBacklightEnable(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting)
def vgaGetBacklightEnable(dwUnit):
	_cgos.CgosVgaGetBacklightEnable.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosVgaGetBacklightEnable.restype = ctypes.c_bool
	pdwSetting = ctypes.c_ulong(0)
	if (_cgos.CgosVgaGetBacklightEnable(hCgos, dwUnit, pdwSetting)) == True: return pdwSetting.value
	else: return False

# bool CgosVgaSetBacklightEnable(HCGOS hCgos, unsigned long dwUnit, unsigned long dwSetting)
def vgaSetBacklightEnable(dwUnit, dwSetting):
	_cgos.CgosVgaSetBacklightEnable.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong)
	_cgos.CgosVgaSetBacklightEnable.restype = ctypes.c_bool
	return _cgos.CgosVgaSetBacklightEnable(hCgos,dwUnit,dwSetting)

# bool CgosVgaGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSVGAINFO *pInfo)
def vgaGetInfo(dwUnit):	
	class CGOSVGAINFO(ctypes.Structure):
		_fields_ = [
			('dwSize', ctypes.c_uint32),
			('dwType', ctypes.c_uint32),
			('dwFlags', ctypes.c_uint32),
			('dwNativeWidth', ctypes.c_uint32),
			('dwNativeHeight', ctypes.c_uint32),
			('dwRequestedWidth', ctypes.c_uint32),
			('dwRequestedHeight', ctypes.c_uint32),
			('dwRequestedBpp', ctypes.c_uint32),
			('dwMaxBacklight', ctypes.c_uint32),
			('dwMaxContrast', ctypes.c_uint32),
		]
